--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".View.AddAgenda"></activity>
-        <activity android:name=".View.Home">
+        <activity android:name=".View.AddAgenda.View"></activity>
+        <activity android:name=".View.Home.View">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
