--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation "androidx.room:room-runtime:2.2.0-alpha01"
     annotationProcessor "androidx.room:room-compiler:2.2.0-alpha01"
     implementation "com.google.android.material:material:1.0.0-rc01"
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 }
