--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     implementation "com.google.android.material:material:1.1.0-alpha09"
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.libraries.places:places:2.0.0'
+    implementation 'androidx.annotation:annotation:1.1.0'
 }
