--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".View.AgendaDetail.View"></activity>
+        <activity android:name=".View.EventDetail.View"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -31,7 +31,7 @@
         <activity
             android:name=".View.ShowOnMap.View"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".View.AddAgenda.View" />
+        <activity android:name=".View.AddAndEditEvent.View" />
         <activity android:name=".View.Home.View">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
