--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: "de.mannodermaus.android-junit5"
 
 android {
     compileSdkVersion 29
@@ -26,10 +27,15 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation "androidx.room:room-runtime:2.2.0-alpha01"
-    annotationProcessor "androidx.room:room-compiler:2.2.0-alpha01"
+    implementation "androidx.room:room-runtime:2.2.0-alpha02"
+    annotationProcessor "androidx.room:room-compiler:2.2.0-alpha02"
     implementation "com.google.android.material:material:1.1.0-alpha09"
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.libraries.places:places:2.0.0'
     implementation 'androidx.annotation:annotation:1.1.0'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+
+    // (Required) Writing and executing Unit Tests on the JUnit Platform
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.1"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.1"
 }
