--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test:core:1.2.1-alpha02'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
     implementation "androidx.room:room-runtime:2.2.0-alpha02"
     annotationProcessor "androidx.room:room-compiler:2.2.0-alpha02"
     implementation "com.google.android.material:material:1.1.0-alpha09"
